Gem update. Malihu custom scrollbar. Bootstrap fonts path fix.

--- a/app/assets/stylesheets/frontend/show.css.scss
+++ b/app/assets/stylesheets/frontend/show.css.scss
@@ -201,8 +201,16 @@
           ul {
             padding: 0px;
             overflow: hidden;
-            overflow-y: scroll;
 
+            .mCSB_container {
+              margin-right: 0px;
+              padding-right: 18px;
+              background-color: #e9e9e9;
+            }
+            .mCSB_dragger_bar {
+              @include  border-radius(0);
+              background-color: $color_1;
+            }
             li {
               border-bottom: 1px solid #ebebeb;
               position: relative;
